--- a/src/client/style.css
+++ b/src/client/style.css
@@ -1,8 +1,15 @@
-body {
-  text-align: center;
-  margin: auto;
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 
-h1 {
-  color: green;
+#root {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
