--- a/src/client/components/Content/index.css
+++ b/src/client/components/Content/index.css
@@ -1,5 +1,37 @@
 .content {
   width: 100%;
   height: 100%;
-  padding: 20px;
+  position: relative;
+}
+
+.content .control-panel {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  height: 75%;
+}
+
+.content .control-panel .control-panel-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  border-color: rgba(0, 0, 0, 0.09);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.09);
+}
+
+.content .control-panel .control-panel-wrapper .ant-card-body {
+  flex: 1;
+}
+
+.content .control-panel .control-panel-wrapper .ant-tabs-tab {
+  font-size: 12px;
+}
+
+.content .control-panel .control-panel-wrapper .tab-content-wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
