--- a/src/client/components/TextPanel/index.css
+++ b/src/client/components/TextPanel/index.css
@@ -5,3 +5,36 @@
   top: 0;
   left: 0;
 }
+
+.text-panel .text-panel-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.text-panel .text-panel-wrapper .inputs-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.text-panel .text-panel-wrapper .inputs-container .input-textarea {
+  flex: 1;
+  resize: none;
+  margin-bottom: 15px;
+}
+
+.text-panel .text-panel-wrapper .inputs-container .input-recipient-id .ant-input-suffix {
+  color: #ccc;
+}
+
+.text-panel .text-panel-wrapper .action-container {
+  text-align: right;
+  margin-top: 30px;
+}
+
+.text-panel .text-panel-wrapper .action-container .btn-reset {
+  margin-right: 10px;
+  padding: 0 30px;
+}
