--- a/src/client/components/FilePanel/index.css
+++ b/src/client/components/FilePanel/index.css
@@ -5,3 +5,15 @@
   top: 0;
   left: 0;
 }
+
+.file-panel .file-panel-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.file-panel .file-panel-wrapper .inputs-container {
+  flex: 1;
+  overflow: scroll;
+}
