--- a/src/client/components/ReceivedPanel/index.css
+++ b/src/client/components/ReceivedPanel/index.css
@@ -16,3 +16,21 @@
   color: rgba(0, 0, 0, 0.65);
   font-size: 13px;
 }
+
+.received-panel .received-panel-wrapper .file-size-label {
+  font-size: 10px;
+  cursor: default;
+  display: inline-block;
+}
+
+.received-panel .received-panel-wrapper .btn-copy-text {
+  height: 24px;
+}
+
+.received-panel .received-panel-wrapper .btn-download {
+  height: 24px;
+}
+
+.received-panel .received-panel-wrapper .received-item {
+  padding: 15px 0;
+}
