--- a/src/client/components/Content/index.css
+++ b/src/client/components/Content/index.css
@@ -18,7 +18,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  border-color: rgba(0, 0, 0, 0.09);
+  border: 1px solid #d9d9d9;
   box-shadow: 0 10px 200px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
 }
