--- a/src/client/style.css
+++ b/src/client/style.css
@@ -3,7 +3,15 @@ body, html {
   padding: 0;
   width: 100%;
   height: 100%;
+}
+
+body {
   box-sizing: border-box;
+  color: #314659;
+  font-size: 14px;
+  font-family: Avenir,-apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol',sans-serif;
+  line-height: 1.5;
+  background: #fff;
 }
 
 #root {
