--- a/src/client/components/ControlPanel/index.css
+++ b/src/client/components/ControlPanel/index.css
@@ -13,7 +13,6 @@
   width: 100%;
   height: 100%;
   border: 1px solid #d9d9d9;
-  /* box-shadow: 0 10px 200px rgba(0,0,0,0.3); */
   border-radius: 5px;
 }
 
@@ -29,6 +28,7 @@
 .control-panel .control-panel-wrapper .client-id {
   font-size: 25px;
   color: #1890ff;
+  letter-spacing: 5.5px;
 }
 
 .control-panel .control-panel-wrapper .ant-card-body {
