--- a/src/client/components/Footer/index.css
+++ b/src/client/components/Footer/index.css
@@ -6,6 +6,13 @@
   font-size: 10px;
 }
 
+.footer .copyright-link {
+  font-size: 10px;
+  border: none;
+  box-shadow: none;
+  padding: 0 3px !important;
+}
+
 @media only screen
 and (max-device-width: 812px)
 and (orientation : landscape) {
