--- a/src/client/components/ReceivedPanel/index.css
+++ b/src/client/components/ReceivedPanel/index.css
@@ -12,25 +12,27 @@
   overflow: scroll;
 }
 
-.received-panel .received-panel-wrapper .item-name {
-  color: rgba(0, 0, 0, 0.65);
-  font-size: 13px;
+.received-panel .received-panel-wrapper .received-item {
+  padding: 15px 0;
 }
 
-.received-panel .received-panel-wrapper .file-size-label {
+.received-panel .received-panel-wrapper .received-item .file-size-label {
   font-size: 10px;
   cursor: default;
   display: inline-block;
 }
 
-.received-panel .received-panel-wrapper .btn-copy-text {
-  height: 24px;
+.received-panel .received-panel-wrapper .received-item .item-name {
+  color: rgba(0, 0, 0, 0.65);
+  font-size: 13px;
+  font-weight: 500;
 }
 
-.received-panel .received-panel-wrapper .btn-download {
-  height: 24px;
+.received-panel .received-panel-wrapper .received-item .item-from {
+  color: rgba(0, 0, 0, 0.45);
+  font-size: 11px;
 }
 
-.received-panel .received-panel-wrapper .received-item {
-  padding: 15px 0;
+.received-panel .received-panel-wrapper .received-item .ant-list-item-action {
+  margin-top: -5px;
 }
