Add basic webrtc support

--- a/src/client/components/ControlPanel/index.css
+++ b/src/client/components/ControlPanel/index.css
@@ -20,6 +20,10 @@
   margin-bottom: 10px;
 }
 
+.control-panel .control-panel-wrapper .ant-card-head {
+  min-height: initial;
+}
+
 .control-panel .control-panel-wrapper .client-id-label {
   margin-right: 10px;
   font-size: 10px;
