--- a/src/client/components/FilePanel/index.css
+++ b/src/client/components/FilePanel/index.css
@@ -14,6 +14,7 @@
 }
 
 .file-panel .file-panel-wrapper .inputs-container {
+  min-height: 0;
   display: flex;
   flex-direction: column;
   flex: 1;
