--- a/src/client/components/FilePanel/index.css
+++ b/src/client/components/FilePanel/index.css
@@ -17,6 +17,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  overflow: scroll;
 }
 
 .file-panel .file-panel-wrapper .inputs-container .file-dragger-container {
