--- a/src/client/components/Header/index.css
+++ b/src/client/components/Header/index.css
@@ -19,6 +19,11 @@
   font-weight: 500;
 }
 
+.header .left-section .app-name-pronunciation-ipa {
+  margin-left: 7px;
+  font-size: 9px;
+}
+
 .header .right-section {
   text-align: right;
   padding-right: 50px;
@@ -67,12 +72,20 @@ and (max-device-width: 812px) {
   .header .right-section .menu-item-feedback {
     padding: 0 10px !important;
   }
+
+  .header .left-section .app-name-pronunciation-ipa {
+    display: none;
+  }
 }
 
 @media only screen
 and (max-device-width: 812px)
 and (orientation : landscape) {
   .header {
+    display: none;
+  }
+
+  .header .left-section .app-name-pronunciation-ipa {
     display: none;
   }
 }
@@ -82,5 +95,9 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px) {
   .header .right-section {
     padding-right: 40px;
+  }
+
+  .header .left-section .app-name-pronunciation-ipa {
+    display: none;
   }
 }
